# the_garden

./: Dependency Flow Diagram.drawio  README.md  Untitled Diagram.drawio  first_time_setup.py  requirements.txt  setup.cfg
docs/: Dependency Flow Diagram.drawio.html  flow_diagram.html  index.html
src/the_garden/: .gitignore  Environment.py  Garden.py  GardenParent.py  InstallMedium.py  Installation.py  README.md  Repository.py  __init__.py  default_envs.py  first_time_setup.py  garden_params.py  main_garden.py
src/the_garden/Templates/: the_garden.py
src/the_garden/base_classes/: ParentClass.py
src/the_garden/directory_operations/: __init__.py
