[metadata]
name = kabbes_the_garden
version = 0.1.0
author = James Kabbes
author_email = james.kabbes@gmail.com
description = Package for easily installing and setting up project environments
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jameskabbes/the_garden
project_urls =
    Documentation = https://github.com/jameskabbes/the_garden
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src